<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <TextView
        android:id="@+id/textView2"
        style="@style/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/todo_fld"
        style="@style/edit_fields"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="text"
        android:singleLine="true"
        android:maxLength="70"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_your_todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.267" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_todo"
        android:text="@string/add"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_fld" />

</androidx.constraintlayout.widget.ConstraintLayout>